gcc/testsuite/rust/rustc/ui/feature-gate/issue-49983-see-issue-0.rs
extern crate core;

// error should not say "(see issue #0)"
#[allow(unused_imports)] use core::ptr::Unique; // { dg-error ".E0658." "" { target *-*-* } }

fn main() {}

